# Importance-reweighting

./: README.md  noxfile.py  pyproject.toml
KL_divergence_estimators/: knn_divergence.py
config/: config.yaml
datasets/cells/TMA9_1A_Scan1/: ._stroma.wkt  ._tumor.wkt
datasets/cells/TMA9_1A_Scan1/T03-2474_IVD/1/: prediction.txt  roi.json
datasets/cells/TMA9_1A_Scan1/T05-00834_I6/1/: prediction.txt  roi.json
datasets/cells/TMA9_1A_Scan1/T05-00883_I7/1/: prediction.txt  roi.json
datasets/cells/TMA9_1A_Scan1/T05-00895_II10/1/: prediction.txt  roi.json
datasets/cells/TMA9_1A_Scan1/T05-02103_I3/1/: prediction.txt  roi.json
datasets/cells/TMA9_1A_Scan1/T05-04302_I18/1/: prediction.txt  roi.json
datasets/cells/TMA9_1A_Scan1/T05-05397_I4/1/: prediction.txt  roi.json
datasets/cells/TMA9_1A_Scan1/T05-05482_II4/1/: prediction.txt  roi.json
datasets/cells/TMA9_1A_Scan1/T05-05713_II3/1/: prediction.txt  (+1 more)
datasets/cells/TMA9_1B_Scan1/: ._stroma.wkt  ._tumor.wkt
datasets/cells/TMA9_2A_Scan1/: ._stroma.wkt  ._tumor.wkt
datasets/cells/TMA9_2B_Scan1/: ._stroma.wkt  ._tumor.wkt
datasets/species/: anemone_year.csv  caltha_year.csv  convallaria_year.csv  hepatica_year.csv  oxalis.csv  oxalis_year.csv  prunus_year.csv  tussilago_year.csv  vaccinium_year.csv
datasets/species/shapefiles/: FIN_adm2.csv  FIN_adm2.dbf  FIN_adm2.shx  FIN_adm3.csv  FIN_adm3.dbf  FIN_adm3.shx  FIN_adm4.csv  FIN_adm4.dbf  FIN_adm4.shx
main/: main.py  plots.py  read_configs.py
mandoline_src/: mandoline.py
notebooks/: datasets.ipynb
plots/: clip_extr.py  extr_plots.py  max_cov_plot.py  param_plots.py  reg_extr.py  single_plot.py
source/: KL_LSCV.py  LCF.py  LSCV.py  errors.py  errors_init.py  estimations.py  mandoline_estimation.py  methods.py  plots.py  run.py  simulation.py
source/KL_divergence_estimators/: knn_divergence.py
tests/: metrics.py  test.py
(+139 files in other folders)
